{
    "name": "Player_InputAction",
    "maps": [
        {
            "name": "Player",
            "id": "a0d7ef84-62f7-4a0d-8370-a54ea6a997ec",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "55cc5e39-a384-45e1-bce6-9b4173acef3f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e6b370d4-de23-4d77-b3c1-c9b8f83a2da8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Teleportation",
                    "type": "Button",
                    "id": "f4dba388-2964-4bc2-8283-4a0ff62ad4bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "48f73118-29a1-4fdb-b8f4-d113f3f1c2fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "c65615cf-54a8-4906-87ac-151d8d01c937",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InterAction",
                    "type": "Button",
                    "id": "223d2a50-d662-413b-bb98-15ae7c703861",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnChest",
                    "type": "Button",
                    "id": "b7047090-46c1-4fba-bf0a-4faf14b6f1ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Side Move",
                    "id": "ec2e687f-ef77-41f8-8697-39a62fd82fac",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "e8113d28-b6b2-418f-932d-40141127f529",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f829ba6d-f55d-4a07-90dc-88551312e964",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "23c59345-bb51-491a-945a-7c68809a5a93",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ca3c27e-1530-44f3-9e55-978e59403e60",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02e7d056-eded-4669-ab25-4dc748fd6bc7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43b8f9a8-45b9-40f1-98dc-a3ac03805bc1",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InterAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4206b8c-2463-4fc8-a048-74c0b4c67f48",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleportation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7805036c-06da-45c1-86a3-bc633ac29f95",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnChest",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "ae00a073-3f96-4574-bb6c-53fa7fcdc2ea",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}